# src/routes/index.ts
@@ -57,8 +57,8 @@ router.use("/machines", machineRoutes);
 router.use("/answer-groups", answerGroups);
 router.use("/answer-group-items", answerGroupItems);
 router.use("/answer-result", answerResultRoutes);
-router.use("/break-forms", breakFormRoutes);
-router.use("/break-machines", breakMachineRoutes);
+router.use("/breaks-forms", breakFormRoutes);
+router.use("/breaks-machines", breakMachineRoutes);
 router.use("/categories-answers", categorieAnswerRoutes);
 router.use("/controls", controlRoutes);
 router.use("/limits-answers", limitAnswerRoutes);
